--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "2mnov",
+  "homepage": "https://jorvqz.github.io/2mnov/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.21"
   },
   "scripts": {
     "start": "react-scripts start",
