--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-wavify": "^1.10.0",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.21"
   },
